# datamuse-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: advanced_usage.rs  basic_usage.rs
src/: client.rs  error.rs  lib.rs  models.rs  utils.rs
src/endpoints/: mod.rs  sug.rs  words.rs
tests/: integration_test.rs
