[package]
name = "datamuse-rust"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust wrapper for the Datamuse API"
authors = ["datamuse-rust contributors"]
license = "MIT"
repository = "https://github.com/username/datamuse-rust"
documentation = "https://docs.rs/datamuse-rust"
readme = "README.md"
keywords = ["datamuse", "api", "words", "language", "dictionary"]
categories = ["api-bindings", "text-processing"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
